# debug-pep561

./: .gitignore  README.md
original/: setup.py
package-dir/: setup.py
pants/: pants.toml
pants-clone/: setup.py
pants/mypkg/: BUILD  demo.py
poetry_runner/: app.py  pyproject.toml
