[tool.poetry]
name = "poetry_runner"
version = "0.1.0"
description = ""
authors = ["Eric Arellano <ericarellano@me.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dist = {path = "../pants/dist/dist-0.1.0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
mypy = "==0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
